--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,6 +41,9 @@ html {
     opacity: 0;
     animation: slideRight 1s ease forwards;
 }
+.navbar {
+    margin-left: 80px; /* Adjust this value as needed */
+}
 .navbar a {
     display: inline-block;
     font-size: 25px;
@@ -1126,5 +1129,10 @@ html {
     margin-top: 0;
     position: relative;
     z-index: 10;
+}
+@media (min-width: 900px) {
+  .navbar {
+    margin-left: 400px; /* Adjust as needed */
+  }
 }
 
